Oppgraderer til Spring Boot 4 (#277)
* Nyaste patch-versjon av springdoc

* Spring Boot 4

* Oppdaterer starter-bruken iht migreringsguiden

* Jakarta RS-avhengnaden bør komme transitivt gjennom spring viss han trengs

* Fiks innrykk

* Guava er ikkje lenger nødvendig

* simpleclient kjem transitivt gjennom simpleclient-common

* Mekanisme for å køyre appen lokalt, ved hjelp av FakeUnleash

* Intro-ADR-sida vart aldri særleg verdifull, så tar ho like godt bort

* Samlar all adoc-en i site, synes det er meir oversiktleg og gir enklare opplegg

* Oppgraderer springdoc

* Oppdaterer url

* Slettar tom docker compose-fil

* Publiserer dokumentasjonen til GitHub Pages

* Nyaste maven-wrapper

* Temp-commit for å trigge asciidoctor-byggejobben ein gong

* Rullar tilbake no når github har oppdaga byggejobben

* Rettar sti

* Temp-commit for å trigge asciidoctor-byggejobben ein gong

* Variablane her har små bokstavar

* Rullar tilbake publiseringsworkaround

* Køyrer salsa parallelt med deploy også her